windows scrollbar fixes;

--- a/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/stone-roberts-anew/resources/assets/styles/common/_global.scss
@@ -144,6 +144,8 @@ body.front {
   }
 
   &.windows {
+    overflow: hidden;
+    
     .fullscreen {
       overflow-y: hidden;
       overflow-x: hidden;
